Updated apis and docker compose to run them locally using https

--- a/docker_quickstart_sln/quickstart_blazor_app/Pages/Cats.razor
+++ b/docker_quickstart_sln/quickstart_blazor_app/Pages/Cats.razor
@@ -44,6 +44,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        cats = await Http.GetFromJsonAsync<Cat[]>("http://localhost:5001/cats");
+        cats = await Http.GetFromJsonAsync<Cat[]>("https://localhost:5002/cats");
     }
 }
