--- a/docker_quickstart_sln/quickstart_blazor_app/Pages/Weather.razor
+++ b/docker_quickstart_sln/quickstart_blazor_app/Pages/Weather.razor
@@ -40,6 +40,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("http://localhost:6001/weatherforecast");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("https://localhost:6002/weatherforecast");
     }
 }
